test/asm/sym-collision.err
warning: sym-collision.asm(20): [-Wpurge]
    Purging a label "dork"
error: sym-collision.asm(25):
    Interpolated symbol "dork" does not exist
error: Assembly aborted (1 error)!
